# BareMetalDispAcc

./: .cproject  BareMetalDispAcc Debug.launch  CMakeLists.txt  CMakePresets.json  STM32F103C8TX_FLASH.ld  accelerometer-registers Debug.launch  compiler_flags.cmake  cpp_test Debug.launch
.metadata/: .log4j.xml  version.ini
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
Inc/: LIS3DH.h  fonts.h  gpioCL.h  i2cCL.h  interruptCL.h  ioBaseCL.h  rccCL.h  spiCL.h  st7735s.h  timCL.h  usartCL.h
Src/: LIS3DH.cpp  fonts.c  gpioCL.cpp  i2cCL.cpp  ioBaseCL.cpp  main.cpp  rccCL.cpp  spiCL.cpp  st7735s.cpp  timCL.cpp  usartCL.cpp
Startup/: startup_stm32f103c8tx.s
